# playing

./: Cargo.toml  README.md
benches/: misses.rs
src/: colwise.rs  lib.rs  rowwise.rs  rowwise_simd.rs
