[package]
name = "playing"
version = "0.1.0"
authors = ["Sebastian Schelter <ssc [at] apache [dot] org>"]

[[bin]]
name = "colwise"
path = "src/colwise.rs"


[[bin]]
name = "rowwise"
path = "src/rowwise.rs"

[[bin]]
name = "rowwise_simd"
path = "src/rowwise_simd.rs"

[[bench]]
name = "misses"
harness = false

[dependencies]
bencher="0.1.3"
rand="0.3.13"
simdeez = "0.4.2"